# QuantumBot

./: .gitignore  README.md  beta.py  bot-communication-beta.py  lite.py  main.py  pyproject.toml
quantumbot/: __init__.py  cli.py  quantum.py  simulation.py  ui.py
tests/: test_quantum.py  test_simulation.py
