[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumbot"
version = "2.0.0"
description = "Evolutionary multi-agent simulation driven by variational quantum circuits"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
quantum = ["qiskit>=2.4,<3"]
dev = ["pytest>=8", "ruff>=0.11"]

[project.scripts]
quantumbot = "quantumbot.cli:main"

[tool.setuptools.packages.find]
include = ["quantumbot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
